--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Web site created using create-react-app" />
+		<meta name="description" content="How you liked our service?" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,7 +13,7 @@
 			href="https://fonts.googleapis.com/css2?family=Overpass&display=swap"
 			rel="stylesheet"
 		/>
-		<title>React App</title>
+		<title>Rating app</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
